welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:9: error: type mismatch;
 found   : Unit
 required: Int
  if (a+c==10){
  ^